--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -33,3 +33,15 @@
   text-align: center;
   font-size: x-large;
 }
+.resetButton {
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+  background-color: red;
+  color: white;
+  border-radius: 100%;
+}
+
+.searchAlgos {
+  cursor: pointer;
+}
